# ML

./: .gitignore  my.wat  pyproject.toml  test.ipynb  test_.py
mymodel/: embeding.py  test_my.py
